Fix documentation typo

--- a/help/C/search.page
+++ b/help/C/search.page
@@ -71,7 +71,7 @@
   </tr>
   <tr>
     <td><p>NOT, not,<key>-</key></p></td> <td><p>
-    Do not display search results with any search team that follows the 
+    Do not display search results with any search term that follows the 
     operator of NOT, not,<key>-</key>.</p></td>
   </tr>  
          
