Fixes typos in English documentation

--- a/help/C/add-radio.page
+++ b/help/C/add-radio.page
@@ -31,7 +31,7 @@
   <p>Internet radio stations are similar to regular radio stations, allowing
   an individual or organization to stream music live over the internet.
   Internet radio stations can be a simultaneous stream of a regular radio station,
-  an amateur broadasting their own station, or commercial
+  an amateur broadcasting their own station, or commercial
   internet radio stations that include live DJs and even commercials.</p>
   
   </section>
