--- a/help/C/import.page
+++ b/help/C/import.page
@@ -52,7 +52,7 @@
     </item>
     <item>
       <title><gui>Videos From Photos Folder</gui></title>
-      <p>Many digital cameras can take short vidoes, and photo-management
+      <p>Many digital cameras can take short videos, and photo-management
       applications often download these videos directly into your Photos
       folder. Choose this option to import any videos that have been
       stored in your Photos folder.</p>
