--- a/help/C/lastfm.page
+++ b/help/C/lastfm.page
@@ -26,7 +26,7 @@
   <p>Last.fm is a popular online service that offers both free and paid
   versions.  Last.fm offers information on music artists and albums and if you 
   create a user profile Last.fm allows you to track the music you listen to 
-  in Banshee for free.  If you suscribe as a paying member, you can also listen
+  in Banshee for free.  If you subscribe as a paying member, you can also listen
   to streaming music from Last.fm in various music clients, including Banshee.
   Last.fm offers multiple channels to stream, including recommended music for
   you based on your listening habits, your favorites and more.</p>
@@ -77,8 +77,8 @@
   music you've loved or tagged.
   </p>
   
-  <p>In Banshee's context menu onthe left hand side, you will now have a 
-  Last.fm section, including your Lat.fm radio stations.  You will need an
+  <p>In Banshee's context menu on the left hand side, you will now have a 
+  Last.fm section, including your Last.fm radio stations.  You will need an
   active internet connection to listen to Last.fm radio.  Choose the radio
   station you wish to listen to and Banshee will communicate with Last.fm
   to populate songs for that radio station.  Press the <gui>Play</gui> button
