--- a/help/C/manage-playlists.page
+++ b/help/C/manage-playlists.page
@@ -44,7 +44,7 @@
     <gui>New Playlist</gui></guiseq> or by selecing the track(s) you would like
     to add to the playlist.  Select the track(s), right click them, and choose
     <guiseq><gui>Add to Playlist</gui><gui>New Playlist</gui></guiseq>.
-    You can also drag and drop them to a new playlist by selcting the track(s) 
+    You can also drag and drop them to a new playlist by selecting the track(s) 
     and dragging them to the left hand
     window pane over <gui>Music</gui>.  As you drag it over <gui>Music</gui>,
     a new option <gui><em>New Playlist</em></gui> will appear and you can drop
