--- a/help/C/sort.page
+++ b/help/C/sort.page
@@ -47,7 +47,7 @@
     <p>You can sort your library by using your mouse to click on any of the
     columns displayed in library view.  If you wish to sort your music library
     by Artist, click the <gui>Artist</gui> column header and Banshee will 
-    automically sort that column alphabetically.  Clicking the 
+    automatically sort that column alphabetically.  Clicking the 
     <gui>Artist</gui> column again will sort the column in reverse alphabetical
     order.</p>
   </section>
