Fixes duplication in documentation sentence

--- a/help/C/introduction.page
+++ b/help/C/introduction.page
@@ -25,7 +25,7 @@
 
   <p>
     <app>Banshee</app> is a media player that allows you to play your music,
-    videos, and other media media as well sync it with portable devices to take your media
+    videos, and other media as well sync it with portable devices to take your media
     on the go.
   </p>
   <p>
