[help] Fix typo add player to "portable music player"

--- a/help/C/sync.page
+++ b/help/C/sync.page
@@ -139,7 +139,7 @@
     menu choose <guiseq><gui>Edit</gui><gui>Delete</gui></guiseq>.</p>
     
      <note style="warning">
-      <p>Deleting files from your portable music will permanently remove
+      <p>Deleting files from your portable music player will permanently remove
       the files and you will not be able to recover them.      
       </p>
     </note>
