[help] Fix grammar / typo on mouse double clicking

--- a/help/C/play.page
+++ b/help/C/play.page
@@ -40,7 +40,7 @@
   </p>
   
   <p>You can also start playing an album by choosing the album in the album
-  browser and pressing use your mouse to double click the song name, 
+  browser and using your mouse to double click the song name, 
   press the <key>Spacebar</key>, or choose <guiseq><gui>Playback</gui>
   <gui>Play</gui></guiseq> from the Banshee menu.
   </p>
