Fixes typo in documentation

--- a/help/C/amazon.page
+++ b/help/C/amazon.page
@@ -54,7 +54,7 @@
   Amazon MP3 Store from the Banshee menu on the left.  This will load the
   Amazon MP3 Store just as if you were in a web browser.  You can search
   Amazon for the music you wish to buy and after logging in to Amazon, buy
-  music with one click.  Banshee will automatically download and import the 
+  music with one click.  Banshee will automatically download and import 
   your purchase into the library.
   </p>
   </section>
