Fix wrong documentation tags

--- a/help/C/ui.page
+++ b/help/C/ui.page
@@ -65,7 +65,7 @@
   <p>To change Now Playing to hide the Banshee user interface and use the full
   screen mode, you can press the <key>F</key>, press the <gui>Fullscreen</gui> 
   button in the upper right hand corner of Banshee, or choose 
-  <guiseq>View<gui></gui>Fullscreen<gui></gui></guiseq> to start Fullscreen
+  <guiseq><gui>View</gui><gui>Fullscreen</gui></guiseq> to start Fullscreen
   mode.</p>
   
 </section>
