--- a/help/C/index.page
+++ b/help/C/index.page
@@ -5,9 +5,14 @@
 
   <info>
     <revision pkgversion="1.6" version="0.1" date="2010-01-22" status="incomplete"/>
+    <revision pkgversion="2.6" version="0.2" date="2012-11-25" status="draft"/>
     <credit type="author">
       <name>Paul Cutler</name>
       <email>pcutler@gnome.org</email>
+    </credit>
+    <credit type="editor">
+      <name>Sindhu S</name>
+      <email>sindhus@live.in</email>
     </credit>
 <!--    
     <copyright>
@@ -38,10 +43,6 @@
   
   <section id="advanced" style="2column">
 	<title>Advanced options and help</title>
-  </section>
-
-  <section id="problems">
-    <title>Common Problems</title>
   </section>
 
 </page>
